# Alicia_duo_ros1

./: .gitignore  CMakeCache.txt  README.md  README_en.md  environment.yml
.github/ISSUE_TEMPLATE/: bug-report---问题报告.md  bug_report.md  question---问题.md
DP/: demo_real_robot.py  eval_real_robot.py  multi_camera_real_robot_async.py  multi_camera_real_robot_sync.py  real_robot.py  real_robot_copy.py  single_camera_real_robot_sync.py  train.py  zarr_viz.py
alicia_duo_descriptions/: CMakeLists.txt  package.xml
alicia_duo_descriptions/config/: urdf.rviz
alicia_duo_descriptions/launch/: display.launch
alicia_duo_descriptions/urdf/: Alicia_duo_description7.csv  alicia_duo_with_gripper.urdf  alicia_duo_with_gripper.xml  alicia_duo_with_gripper_v0.urdf  alicia_duo_with_gripper_v1.urdf
alicia_duo_drag_teaching/: CMakeLists.txt  package.xml
alicia_duo_drag_teaching/launch/: drag_teaching.launch
alicia_duo_drag_teaching/script/: demo_mode.py  pose_data.bag  pose_record.py  pose_replicator.py
alicia_duo_driver/: CMakeCache.txt
alicia_duo_driver/scripts/: arm_control_demo.py  servo_control_node.py  servo_states_node.py
alicia_duo_driver/src/: serial_server_node.cpp
alicia_duo_grasp_2d/: CMakeLists.txt  package.xml
alicia_duo_grasp_2d/launch/: grasp_execution.launch
alicia_duo_grasp_2d/scripts/: Obj_detection.py  Obpose.py  grasp_2d.py  hsv_select.py  obj_detec.py  table_detect.py  test.py
alicia_duo_grasp_6d/: alicia_grasp.py
alicia_duo_grasp_6d/real/: realsenseD405.py  testGripper.py
alicia_duo_moveit/: .setup_assistant  CMakeLists.txt  package.xml
alicia_duo_moveit/config/: alicia_duo_descriptions.srdf  fake_controllers.yaml  gazebo_alicia_duo_descriptions.urdf  gazebo_alicia_duo_v5_03.urdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
alicia_duo_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  real_robot_control.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  (+3 more)
alicia_duo_ros_control/: CMakeLists.txt  package.xml
alicia_duo_v5_03/: CMakeLists.txt  package.xml
arm_grasp/: CMakeLists.txt  package.xml
arm_moveit_v0/: .setup_assistant  CMakeLists.txt  package.xml
devel/: .catkin  setup.sh
examples/: logi_eye_on_hand.launch  orbbec_eye_on_base.launch
install/: alicia_amd64_install.sh
leader_arm_driver/: CMakeLists.txt  package.xml
leader_arm_driver/include/: serial_comm_helper.h
leader_arm_driver/launch/: driver.launch  serial_commu.launch
leader_arm_driver/rviz/: leader_config.rviz
leader_arm_driver/src/: alicia_hw.cpp  hardware_interface_node.cpp  leader_joint_listener.cpp  leader_joint_publisher.cpp  serial_comm_helper.cpp
robot_control/: CMakeLists.txt  package.xml
ros_controller/: CMakeLists.txt  package.xml
(+249 files in other folders)
